--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desafio TechLead</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<title>Desafio TechLead</title>
 </head>
+
 <body>
-  <h1>Desafio TechLead</h1>
-  <!--<h3>x<span th:text="${attribute}"></span></h3>-->
-  <h2>Analista Desenvolvedor</h2>
-  <h3>Java Spring</h3>
+
+	<div style="border: 1px solid black; width: 90%; margin: auto; padding: 10px">
+
+		<div style="margin-bottom: 50px; border: 1px solid transparent; width: 50%; margin: auto; padding: 10px; text-align: center">
+			<h1>Desafio TechLead</h1>
+			<h2>Analista Desenvolvedor</h2>
+			<h3>Java Spring</h3>
+			<h4>Rômulo Albuquerque</h4>
+		</div>
+
+		<div style="border: 1px solid black; width: 70%; margin: auto; padding: 10px">
+
+			<h1 style="text-align: center; font-size: 18pt">Cadastrar Livro</h1>
+			
+			<form action="">
+
+				<div class="mb-3">
+					<label for="exampleFormControlInput1" class="form-label">Author: </label>
+					<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Author">
+				</div>
+
+				<div class="mb-3">
+					<label for="exampleFormControlInput1" class="form-label">Nome: </label>
+					<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="nome">
+				</div>
+
+				<div class="mb-3">
+					<label for="exampleFormControlInput1" class="form-label">Descrição: </label>
+					<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Descrição">
+				</div>
+
+			</form>
+
+		</div>
+
+	</div>
+
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
+
 </body>
+
 </html>
