--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -33,6 +33,11 @@ body {
 
 .div-header{
 	margin: 1px solid transparent;
+	color: white;
+}
+.div-header h1{
+	color: blue;
+	font-family: sans serif, arial;
 }
 
 .div-titles{
@@ -69,7 +74,7 @@ body {
 }
 
 .div-2-links{
-	border: 1px solid black;
+	border: 1px solid transparent;
 	width: 90%;
 	margin: auto;
 	display: flex;
@@ -128,5 +133,63 @@ body {
 	text-align: center;
 	padding-top: 2%;
 	padding-bottom: 1%;
+}
+
+.div-2-quad{
+	border: 1px solid transparent;
+	height: 120px;
+	width: 90%;
+	margin: auto;
+	display: flex;
+}
+
+.div-quad{
+	border: 1px solid transparent;
+	background-color: white;
+	height: 120px;
+	width: 50%;
+	margin: auto;
+	text-align: center;
+	padding-top: 15%; 
+	background-color: #20B2AA;
+	color: white;
+	text-transform: uppercase;
+}
+
+.div-quad a:link {
+   color: white;
+   text-decoration: none;
+}
+
+.div-quad a:hover {
+    color: #000000;
+}
+
+.div-quad a:active {
+    color: green;
+}
+
+.todos{
+	background-color: #4B0082;
+}
+
+.cadastrar{
+	background-color: #8B008B;
+}
+
+.atualizar{
+	background-color: #DC143C;
+}
+
+.deletar{
+	background-color: #8B0000;
+}
+
+.div-4-quad{
+	background-color: orange;
+}
+
+.div-main-home{
+	background-color: #EEE8AA;
 }
 
